# Image-Processor

./: CMakeLists.txt  README.md  gui.py
.github/workflows/: build.yml
src/: arg_parser.cpp  arg_parser.h  bmp.cpp  bmp.h  color.h  crop_filter.cpp  crop_filter.h  edgedetection_filter.cpp  edgedetection_filter.h  filter.h  gaussianblur_filter.cpp  gaussianblur_filter.h  grayscale_filter.cpp  grayscale_filter.h  image.cpp  image.h  image_processor.cpp  negative_filter.cpp  negative_filter.h  sharpening_filter.cpp  sharpening_filter.h  twirl_filter.cpp  twirl_filter.h
